# mds_backend

./: .env  Cargo.toml  README.md  compose.dev.yaml
migrations/: 20251021150201_init.down.sql  20251021150201_init.up.sql
src/: config.rs  db.rs  init.rs  lib.rs  logger.rs  main.rs
src/adapters/: mod.rs  role_adapter.rs  tariff_adapter.rs
src/application/: mod.rs  role.rs  tariff.rs
src/di/: mod.rs  role_container.rs  tariff_container.rs
src/features/: mod.rs
src/features/default_storage/: logic.rs  mod.rs  repository.rs
src/features/employee/: handler.rs  logic.rs  mod.rs  repository.rs
src/features/role/: handler.rs  logic.rs  mod.rs  repository.rs
src/features/tariff/: handler.rs  logic.rs  mod.rs  repository.rs
src/httpserver/: mod.rs  role_handler.rs  tariff_handler.rs
src/models/: default_storage.rs  employee.rs  error.rs  mod.rs  role.rs  service.rs  tariff.rs
